--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,6 @@ ul[class],
 ol[class] {
   list-style: none; }
 
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
-a:not([class]) {
-  text-decoration-skip-ink: auto; }
-
 /* Упрощаем работу с изображениями */
 img {
   max-width: 100%;
@@ -374,7 +370,7 @@ body {
     margin: -50px 40px 0 40px;
     z-index: 10;
     font-size: 0;
-    overflow: none;
+    overflow: hidden;
     width: 40px;
     height: 100px;
     border: none; }
