--- a/css/style.css
+++ b/css/style.css
@@ -370,16 +370,16 @@ body {
     margin: -50px 40px 0 40px;
     z-index: 10;
     font-size: 0;
-    overflow: hidden;
+    overflow: none;
     width: 40px;
     height: 100px;
     border: none; }
   .slider .slick-arrow.slick-prev {
     left: 0;
-    background: url("/img/Main Slider/arrow_p.svg") 0 0 no-repeat; }
+    background: url("/img/Main-Slider/arrow_p.svg") 0 0 no-repeat; }
   .slider .slick-arrow.slick-next {
     right: 0;
-    background: url("/img/Main Slider/arrow_n.svg") 0 0 no-repeat; }
+    background: url("/img/Main-Slider/arrow_n.svg") 0 0 no-repeat; }
 
 .feature-products {
   display: -webkit-box;
